    system theme. (Ticket #485. Patch from mkirk.)
  o Correct the path to the badge pixmap used in time skew warning
    messages. (Ticket #537. Patch from mkirk.)
  o Clean up a couple status event messages related to dangerous port
    warnings.
  o Change the vidalia_ru.nsh output encoding from KOI8-R to Windows-1251. 
    (Ticket #527)


0.2.6   02-Nov-2009
  o Remove the erroneous comma in the default vidalia.conf in the
    Mac OS X drag-and-drop bundle, since we now dump whatever the
    user types into a QString rather than parsing it into a
    QStringList.
  o Updated the Arabic, Russian and Slovenian translations.


0.2.5   14-Oct-2009
  o Add support in the Network settings page for configuring the
    Socks4Proxy and Socks5Proxy* options that were added in
    Tor 0.2.2.1-alpha. Patch from Christopher Davis.
  o Add a "Automatically distribute my bridge address" checkbox (enabled
    by default) to the bridge relay settings options. (Ticket #524)
  o Add ports 7000 and 7001 to the list of ports excluded by the IRC
    category in the exit policy configuration tab. (Ticket #517)
  o Add a context menu for highlighted event items in the "Basic" message
    log view that allows the user to copy the selected item text to the
    clipboard.
  o Maybe fix a time conversion bug that could result in Vidalia
    displaying the wrong uptime for a relay in the network map.
  o Stop trying to enforce proper quoting and escaping of arguments to be
    given to the proxy executable (e.g., Polipo). Now the user is on their
    own for properly formatting the command line used to start the proxy
    executable. (Ticket #523)


0.2.4   07-Sep-2009
  o Split the message log into "Basic" and "Advanced" views. The
    "Advanced" view contains standard log messages from Tor, while the new
    experimental "Basic" view displays status events received from Tor.
    (Ticket #265)
  o Apply an application-global stylesheet on OS X that forces all tree